# nbody

./: CMakeLists.txt  README.md  launch.sh
include/: particle.h  simulation.h
src/: raylib.c  simulation.c
